--- a/www/index.html
+++ b/www/index.html
@@ -3,8 +3,9 @@
   <script src="/bundle.js" ></script> 
 </head>
 <body>
-  Hello World
+  <h3>React Examples</h3>
 
-	<div id="mount"></div>
+	<div id="helloMount"></div>
+	<div id="countMount"></div>
 </body>
 </html>
