Update untracked files

--- a/www/index.html
+++ b/www/index.html
@@ -4,8 +4,6 @@
 </head>
 <body>
   <h3>React Examples</h3>
-
-	<div id="helloMount"></div>
-	<div id="countMount"></div>
+	<div id="mount"></div>
 </body>
 </html>
