WOrking LED Component

--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
   <script src="/bundle.js" ></script> 
 </head>
 <body>
-  <h3>Diamond Synchrotron Signal pv:</h3>
+  <h3>DIamond Light Source Synchrotron PVs:</h3>
   <div id="mount"></div>
 </body>
 </html>
